1) Fix overflow bug 2) Ameliorated footer 3) Added links to contacts and social media 4) Fix footer doesn't flow in the middle when there's only 1 post

--- a/blog-app/src/App.css
+++ b/blog-app/src/App.css
@@ -70,25 +70,32 @@ nav {
 .App-link {
   color: #61dafb;
 }
-
 .footer {
+  
+  margin-top: 10%;
+  height:30vh;
   display:flex;
   background-color: #282c34ff;
   color: #ACC8E5;
-  padding:2%;
   text-align: left;
   align-items: center;
   justify-content: space-between;
 }
 
 .footer-normal{
+  padding: 0 0 0 5%;
   flex:3;
   order:1;
+  /* outline: dotted 2px red; */
+  height:20vh;
 }
 
 .footer-contact{
+  padding: 0 5% 0 0;
   flex:1;
   order:2;
+  /* outline: dotted 2px red; */
+  /* height:20vh; */
 }
 .footer .footer-contact h3{
   font-weight: 1000;
@@ -97,11 +104,12 @@ nav {
 .email-wrapper {
   display: flex;
   align-items: center;
-  /* vertical-align: center; */
+  justify-content: space-between;
 }
-.email-wrapper h4{
+.email-wrapper a{
   padding-right:5%;
 }
+
 .footer .footer-contact h4{
   display: inline-block;
   font-size: 1.5vw;
@@ -113,6 +121,7 @@ nav {
   color: #ACC8E5;
   margin: 1%;
   font-size: 7.5vh;
+  cursor: pointer;
 }
 
 .footer .footer-font {
